mesh/ffi/include/library/mesh-ffi-levels.h

void eap_mesh_cpp_levels_recon_move_f(eap_mesh_cpp_levels_t *levels,
                                      eap_local_t data_length,
                                      size_t length,
                                      eap_local_t const *send_start,
                                      eap_local_t const *send_length,
                                      eap_local_t const *recv_start,
                                      eap_local_t const *recv_length);
void eap_mesh_cpp_levels_foreach_at_level(eap_mesh_cpp_levels_t const *levels,
                                          eap_local_t const level,
                                          void *context,
                                          void (*function)(void *context, eap_local_t cell));
void eap_mesh_cpp_levels_map_at_level_f(eap_mesh_cpp_levels_t const *levels,
                                        eap_local_t const level,
                                        abi_ndarray_t const out,
                                        void *context,
                                        int32_t (*function)(void *context, eap_local_t cell));
void eap_mesh_cpp_levels_count_filter_at_level(eap_mesh_cpp_levels_t const *levels,
                                               eap_mesh_cpp_cells_t const *cells,
                                               eap_local_t const level,
                                               void *context,
                                               bool (*function)(void *context, eap_local_t cell),
                                               eap_local_t *count);
void eap_mesh_cpp_levels_filter_at_level_f(eap_mesh_cpp_levels_t const *levels,
                                           eap_mesh_cpp_cells_t const *cells,
                                           eap_local_t const level,
                                           abi_ndarray_t const out,
                                           void *context,
                                           bool (*function)(void *context, eap_local_t cell));
void eap_mesh_cpp_levels_collect_at_level_f(eap_mesh_cpp_levels_t const *levels,
                                            eap_mesh_cpp_cells_t const *cells,
                                            eap_local_t const level,
                                            abi_ndarray_t const out);
void eap_mesh_cpp_levels_clear_at_level(eap_mesh_cpp_levels_t *levels,
                                        eap_local_t const level,
                                        abi_ndarray_t const flags,
                                        eap_local_t *num_cleared);
void eap_mesh_cpp_levels_num_at_level(eap_mesh_cpp_levels_t const *levels,
                                      eap_local_t const level,
                                      eap_local_t *num);
void eap_mesh_cpp_levels_recon_pack(eap_mesh_cpp_levels_t *levels,
                                    eap_local_t nlow,
                                    eap_local_t nhigh,
                                    eap_local_t nstep,
                                    eap_local_t move_num,
                                    eap_local_t const *move_from,
                                    eap_local_t const *move_to);
void eap_mesh_cpp_levels_set_flags(eap_mesh_cpp_levels_t *levels,
                                   eap_local_t low,
                                   eap_local_t high,
                                   void *context,
                                   int32_t (*function)(void *, eap_local_t));
void eap_mesh_cpp_levels_set_flags_scalar(eap_mesh_cpp_levels_t *levels,
                                          eap_local_t low,
                                          eap_local_t high,
                                          int32_t value);
void eap_mesh_cpp_levels_set_flags_all(eap_mesh_cpp_levels_t *levels, int32_t value);
void eap_mesh_cpp_levels_set_flags_scalar_when(eap_mesh_cpp_levels_t *levels,
                                               eap_local_t low,
                                               eap_local_t high,
                                               int32_t value,
                                               void *context,
                                               int32_t (*function)(void *, eap_local_t));
void eap_mesh_cpp_levels_set_flags_scalar_from_list(eap_mesh_cpp_levels_t *levels,
                                                    size_t list_size,
                                                    eap_local_t const *list,
                                                    int32_t value);
void eap_mesh_cpp_levels_set_flags_scalar_and_tags_from_list(eap_mesh_cpp_levels_t *levels,
                                                             size_t list_size,
                                                             eap_local_t const *list,
                                                             int32_t value,
                                                             size_t tags_size,
                                                             int32_t const *tags);
void eap_mesh_cpp_levels_set_flags_from_tuples(eap_mesh_cpp_levels_t *levels,
                                               size_t tups_size,
                                               eap_mesh_loc_val const *tups);
void eap_mesh_cpp_levels_set_flag_tags_from_tuples(eap_mesh_cpp_levels_t *levels,
                                                   size_t tups_size,
                                                   eap_mesh_loc_val const *tups);
void eap_mesh_cpp_levels_set_flags_from_tuples_key_and_scalar(eap_mesh_cpp_levels_t *levels,
                                                              size_t tups_size,
                                                              eap_mesh_loc_val const *tups,
                                                              int32_t value);
void eap_mesh_cpp_levels_set_flag_tags_from_tuples_key_and_scalar(eap_mesh_cpp_levels_t *levels,
                                                                  size_t tups_size,
                                                                  eap_mesh_loc_val const *tups,
                                                                  int32_t value);
void eap_mesh_cpp_levels_mom_kid_build(eap_mesh_cpp_levels_t *levels, eap_mesh_cpp_cells_t *cells);
void eap_mesh_cpp_levels_mom_kid_free(eap_mesh_cpp_levels_t *levels);
void eap_mesh_cpp_levels_kid_mom_build(eap_mesh_cpp_levels_t *levels, eap_mesh_cpp_cells_t *cells);
void eap_mesh_cpp_levels_mom_kids_build(eap_mesh_cpp_levels_t *levels, eap_mesh_cpp_cells_t *cells);
void eap_mesh_cpp_levels_check_lohipack_and_levels(eap_mesh_cpp_levels_t *levels,
                                                   eap_mesh_cpp_cells_t const *cells);
void eap_mesh_cpp_levels_recon_div_parent(eap_mesh_cpp_levels_t *levels,
                                          eap_mesh_cpp_cells_t const *cells,
                                          eap_local_t parentl,
                                          eap_local_t childl);
void eap_mesh_cpp_levels_recon_div_child(eap_mesh_cpp_levels_t *levels,
                                         eap_mesh_cpp_cells_t const *cells,
                                         eap_local_t level,
                                         eap_local_t parentl,
                                         eap_local_t l);
void eap_mesh_cpp_levels_clear_daughter(eap_mesh_cpp_levels_t *levels, eap_local_t l);
void eap_mesh_cpp_levels_kid_get(eap_mesh_cpp_levels_t *levels,
                                 eap_local_t level,
                                 abi_ndarray_t const *input,
                                 abi_ndarray_t const *output,
                                 eap_comm_datatype_t datatype);
void eap_mesh_cpp_levels_kid_put(eap_mesh_cpp_levels_t *levels,
                                 eap_local_t level,
                                 abi_ndarray_t const *input,
                                 abi_ndarray_t const *output,
                                 eap_comm_datatype_t datatype);