mesh/fortran/src/mesh-levels.F90


    subroutine eap_mesh_cpp_levels_recon_move_f(&
      levs, data_length, length, send_start, send_length, recv_start, &
      recv_length &
    ) bind(C, name="eap_mesh_cpp_levels_recon_move_f")
      use, intrinsic :: iso_c_binding
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: data_length
      integer(c_size_t), value :: length
      integer(c_int32_t), dimension(*) :: &
        send_start, send_length, recv_start, recv_length
    end subroutine eap_mesh_cpp_levels_recon_move_f

    subroutine eap_mesh_cpp_levels_foreach_at_level(&
      levs, level, context, f &
    ) bind(C, name = "eap_mesh_cpp_levels_foreach_at_level")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: level
      type(c_ptr), value :: context
      interface
        subroutine f(context, l) bind(C)
          import

          type(c_ptr), value :: context
          integer(c_int32_t), value :: l
        end subroutine f
      end interface
    end subroutine eap_mesh_cpp_levels_foreach_at_level

    subroutine eap_mesh_cpp_levels_map_at_level_f(&
      levs, level, out, context, f &
    ) bind(C, name = "eap_mesh_cpp_levels_map_at_level_f")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: level
      type(nd_array_t), value :: out
      type(c_ptr), value :: context
      interface
        integer(c_int32_t) function f(context, l) bind(C)
          import

          type(c_ptr), value :: context
          integer(c_int32_t), value :: l
        end function f
      end interface
    end subroutine eap_mesh_cpp_levels_map_at_level_f

    subroutine eap_mesh_cpp_levels_count_filter_at_level(&
      levs, cells, level, context, f, count &
    ) bind(C, name = "eap_mesh_cpp_levels_count_filter_at_level")
      import

      type(c_ptr), value :: levs
      type(c_ptr), value :: cells
      integer(c_int32_t), value :: level
      type(c_ptr), value :: context
      interface
        logical(c_bool) function f(context, l) bind(C)
          import

          type(c_ptr), value :: context
          integer(c_int32_t), value :: l
        end function f
      end interface
      integer(c_int32_t), intent(out) :: count
    end subroutine eap_mesh_cpp_levels_count_filter_at_level

    subroutine eap_mesh_cpp_levels_filter_at_level_f(&
      levs, cells, level, out, context, f &
    ) bind(C, name = "eap_mesh_cpp_levels_filter_at_level_f")
      import

      type(c_ptr), value :: levs
      type(c_ptr), value :: cells
      integer(c_int32_t), value :: level
      type(nd_array_t), value :: out
      type(c_ptr), value :: context
      interface
        logical(c_bool) function f(context, l) bind(C)
          import

          type(c_ptr), value :: context
          integer(c_int32_t), value :: l
        end function f
      end interface
    end subroutine eap_mesh_cpp_levels_filter_at_level_f

    subroutine eap_mesh_cpp_levels_collect_at_level_f(&
      levs, cells, level, out &
    ) bind(C, name = "eap_mesh_cpp_levels_collect_at_level_f")
      import

      type(c_ptr), value :: levs
      type(c_ptr), value :: cells
      integer(c_int32_t), value :: level
      type(nd_array_t), value :: out
    end subroutine eap_mesh_cpp_levels_collect_at_level_f

    subroutine eap_mesh_cpp_levels_clear_at_level(&
      levs, level, flags, num_cleared &
    ) bind(C, name = "eap_mesh_cpp_levels_clear_at_level")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: level
      type(nd_array_t), value :: flags
      integer(c_int32_t), intent(out) :: num_cleared
    end subroutine eap_mesh_cpp_levels_clear_at_level

    subroutine eap_mesh_cpp_levels_num_at_level(&
      levs, level, num &
    ) bind(C, name = "eap_mesh_cpp_levels_num_at_level")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: level
      integer(c_int32_t), intent(out) :: num
    end subroutine eap_mesh_cpp_levels_num_at_level

    subroutine eap_mesh_cpp_levels_recon_pack(&
      levs, nlow, nhigh, nstep, move_num, move_from, move_to &
    ) bind(C, name = "eap_mesh_cpp_levels_recon_pack")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: nlow
      integer(c_int32_t), value :: nhigh
      integer(c_int32_t), value :: nstep
      integer(c_int32_t), value :: move_num
      integer(c_int32_t), intent(in) :: move_from(*)
      integer(c_int32_t), intent(in) :: move_to(*)
    end subroutine eap_mesh_cpp_levels_recon_pack

    subroutine eap_mesh_cpp_levels_set_flags(&
      levs, low, high, context, func &
    ) bind(C, name = "eap_mesh_cpp_levels_set_flags")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: low
      integer(c_int32_t), value :: high
      type(c_ptr), value :: context
      interface
        integer(c_int32_t) function func(context, i) bind(C)
          import

          type(c_ptr), value :: context
          integer(c_int32_t), value :: i
        end function func
      end interface
    end subroutine eap_mesh_cpp_levels_set_flags

    subroutine eap_mesh_cpp_levels_set_flags_scalar(&
      levs, low, high, value &
    ) bind(C, name = "eap_mesh_cpp_levels_set_flags_scalar")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: low
      integer(c_int32_t), value :: high
      integer(c_int32_t), value :: value
    end subroutine eap_mesh_cpp_levels_set_flags_scalar

    subroutine eap_mesh_cpp_levels_set_flags_all(&
      levs, value &
    ) bind(C, name = "eap_mesh_cpp_levels_set_flags_all")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: value
    end subroutine eap_mesh_cpp_levels_set_flags_all

    subroutine eap_mesh_cpp_levels_set_flags_scalar_when(&
      levs, low, high, value, context, func &
    ) bind(C, name = "eap_mesh_cpp_levels_set_flags_scalar_when")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: low
      integer(c_int32_t), value :: high
      integer(c_int32_t), value :: value
      type(c_ptr), value :: context
      interface
        integer(c_int32_t) function func(context, i) bind(C)
          import

          type(c_ptr), value :: context
          integer(c_int32_t), value :: i
        end function func
      end interface
    end subroutine eap_mesh_cpp_levels_set_flags_scalar_when

    subroutine eap_mesh_cpp_levels_set_flags_scalar_from_list(&
      levs, list_size, list, value &
    ) bind(C, name = "eap_mesh_cpp_levels_set_flags_scalar_from_list")
      import

      type(c_ptr), value :: levs
      integer(c_size_t), value :: list_size
      integer(c_int32_t) :: list(*)
      integer(c_int32_t), value :: value
    end subroutine eap_mesh_cpp_levels_set_flags_scalar_from_list

    subroutine eap_mesh_cpp_levels_set_flags_scalar_and_tags_from_list(&
      levs, list_size, list, value, tags_size, tags &
    ) bind(C, name = "eap_mesh_cpp_levels_set_flags_scalar_and_tags_from_list")
      import

      type(c_ptr), value :: levs
      integer(c_size_t), value :: list_size
      integer(c_int32_t), intent(in) :: list(*)
      integer(c_int32_t), value :: value
      integer(c_size_t), value :: tags_size
      integer(c_int32_t), intent(in) :: tags(*)
    end subroutine eap_mesh_cpp_levels_set_flags_scalar_and_tags_from_list

    subroutine eap_mesh_cpp_levels_set_flags_from_tuples(&
      levs, tups_size, tups &
    ) bind(C, name = "eap_mesh_cpp_levels_set_flags_from_tuples")
      import

      type(c_ptr), value :: levs
      integer(c_size_t), value :: tups_size
      type(loc_val_t), intent(in) :: tups(*)
    end subroutine eap_mesh_cpp_levels_set_flags_from_tuples

    subroutine eap_mesh_cpp_levels_set_flag_tags_from_tuples(&
      levs, tups_size, tups &
    ) bind(C, name = "eap_mesh_cpp_levels_set_flag_tags_from_tuples")
      import

      type(c_ptr), value :: levs
      integer(c_size_t), value :: tups_size
      type(loc_val_t), intent(in) :: tups(*)
    end subroutine eap_mesh_cpp_levels_set_flag_tags_from_tuples

    subroutine eap_mesh_cpp_levels_set_flags_from_tuples_key_and_scalar(&
      levs, tups_size, tups, value &
    ) bind(C, name = "eap_mesh_cpp_levels_set_flags_from_tuples_key_and_scalar")
      import

      type(c_ptr), value :: levs
      integer(c_size_t), value :: tups_size
      type(loc_val_t), intent(in) :: tups(*)
      integer(c_int32_t), value :: value
    end subroutine eap_mesh_cpp_levels_set_flags_from_tuples_key_and_scalar

    subroutine eap_mesh_cpp_levels_set_flag_tags_from_tuples_key_and_scalar(&
      levs, tups_size, tups, value &
    ) bind(&
      C, &
      name = "eap_mesh_cpp_levels_set_flag_tags_from_tuples_key_and_scalar" &
    )
      import

      type(c_ptr), value :: levs
      integer(c_size_t), value :: tups_size
      type(loc_val_t), intent(in) :: tups(*)
      integer(c_int32_t), value :: value
    end subroutine eap_mesh_cpp_levels_set_flag_tags_from_tuples_key_and_scalar

    subroutine eap_mesh_cpp_levels_mom_kid_build(&
      levs, cells &
    ) bind(C, name = "eap_mesh_cpp_levels_mom_kid_build")
      import

      type(c_ptr), value :: levs, cells
    end subroutine eap_mesh_cpp_levels_mom_kid_build

    subroutine eap_mesh_cpp_levels_mom_kid_free(&
      levs &
    ) bind(C, name = "eap_mesh_cpp_levels_mom_kid_free")
      import

      type(c_ptr), value :: levs
    end subroutine eap_mesh_cpp_levels_mom_kid_free

    subroutine eap_mesh_cpp_levels_kid_mom_build(&
      levs, cells &
    ) bind(C, name = "eap_mesh_cpp_levels_kid_mom_build")
      import

      type(c_ptr), value :: levs, cells
    end subroutine eap_mesh_cpp_levels_kid_mom_build

    subroutine eap_mesh_cpp_levels_mom_kids_build(&
      levs, cells &
    ) bind(C, name = "eap_mesh_cpp_levels_mom_kids_build")
      import

      type(c_ptr), value :: levs, cells
    end subroutine eap_mesh_cpp_levels_mom_kids_build

    subroutine eap_mesh_cpp_levels_check_lohipack_and_levels(&
      levs, cells &
    ) bind(C, name = "eap_mesh_cpp_levels_check_lohipack_and_levels")
      import

      type(c_ptr), value :: levs, cells
    end subroutine eap_mesh_cpp_levels_check_lohipack_and_levels

    subroutine eap_mesh_cpp_levels_recon_div_parent(&
      levs, cells, parentl, childl &
    ) bind(C, name="eap_mesh_cpp_levels_recon_div_parent")
      import

      type(c_ptr), value :: levs, cells
      integer(c_int32_t), value :: parentl, childl
    end subroutine eap_mesh_cpp_levels_recon_div_parent

    subroutine eap_mesh_cpp_levels_recon_div_child(&
      levs, cells, level, parentl, l &
    ) bind(C, name="eap_mesh_cpp_levels_recon_div_child")
      import

      type(c_ptr), value :: levs, cells
      integer(c_int32_t), value :: level, parentl, l
    end subroutine eap_mesh_cpp_levels_recon_div_child

    subroutine eap_mesh_cpp_levels_clear_daughter(&
      levs, l &
    ) bind(C, name="eap_mesh_cpp_levels_clear_daughter")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: l
    end subroutine eap_mesh_cpp_levels_clear_daughter

    subroutine eap_mesh_cpp_levels_kid_get(&
      levs, level, input, output, datatype &
    ) bind(C, name="eap_mesh_cpp_levels_kid_get")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: level
      type(nd_array_t), intent(in) :: input
      type(nd_array_t), intent(in) :: output
      integer(c_int), value :: datatype
    end subroutine eap_mesh_cpp_levels_kid_get

    subroutine eap_mesh_cpp_levels_kid_put(&
      levs, level, input, output, datatype &
    ) bind(C, name="eap_mesh_cpp_levels_kid_put")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: level
      type(nd_array_t), intent(in) :: input
      type(nd_array_t), intent(in) :: output
      integer(c_int), value :: datatype
    end subroutine eap_mesh_cpp_levels_kid_put
